@@ -743,6 +743,7 @@ sge_commit_flags_t commit_flags
                   lListElem_clear_changed_info(hep);
                }
                qinstance_debit_consumable(qinstance, jep, Master_CEntry_List, slots);
+               reporting_create_queue_consumable_record(&answer_list, qinstance, now);
                /* this info is not spooled */
                qinstance_add_event(qinstance, sgeE_QINSTANCE_MOD); 
                lListElem_clear_changed_info(qinstance);
@@ -1177,6 +1178,7 @@ static void sge_clear_granted_resources(lListElem *job, lListElem *ja_task,
                lListElem_clear_changed_info(host);
             }
             qinstance_debit_consumable(queue, job, Master_CEntry_List, -tmp_slot);
+            reporting_create_queue_consumable_record(&answer_list, queue, now);
          }
 
          /* this info is not spooled */
