@@ -33,6 +33,7 @@
 
 #include "sgermon.h"
 #include "sge_log.h"
+#include "sge_time.h"
 #include "sge_conf.h"
 #include "sge_sched.h"
 #include "sge_signal.h"
@@ -51,6 +52,8 @@
 #include "sge_object.h"
 #include "sge_subordinate.h"
 #include "sge_qref.h"
+
+#include "sge_reporting_qmaster.h"
 
 /* EB: ADOC: add comments */
 
@@ -192,6 +195,7 @@ qinstance_x_on_subordinate(lListElem *this_elem, bool suspend,
       qinstance_state_set_susp_on_sub(this_elem, suspend);
 
       sge_add_event(NULL, 0, event, 0, 0, cqueue_name, hostname, NULL, NULL);
+      reporting_create_queue_record(NULL, this_elem, sge_get_gmt());
       lListElem_clear_changed_info(this_elem);
    }
 
