@@ -1,3 +1,7 @@
+JG-2004-01-28-1: Enhancem.: Added queue state and consumable information to the
+                            reporting file.
+                 Review:    pending
+
 EB-2004-01-28-0: Enhancem.: Changed some man-pages concerning CQs
 
 MD-2004-01-28-2: Bugfix:    qalter lacks option -dl              
